--- a/styles/styles.css
+++ b/styles/styles.css
@@ -125,3 +125,37 @@ main {
   width: 100%;
   height: 700px;
 }
+
+.jenna {
+  border: 1px solid red;
+  max-width: 1200px;
+  height: 700px;
+  margin-left: 10rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.jenna h2 {
+  font-family: "Inclusive Sans", sans-serif;
+  font-size: 30px;
+  font-weight: 800;
+  color: white;
+}
+
+.jenna p {
+  color: white;
+  font-size: 19px;
+  max-width: 530px;
+}
+
+.jenna a {
+  cursor: pointer;
+  color: black;
+  background: white;
+  padding: 1rem;
+  font-weight: 600;
+  box-shadow: 1px solid white;
+}
