--- a/styles/styles.css
+++ b/styles/styles.css
@@ -81,6 +81,8 @@ main {
   border-bottom: 1px solid black;
 }
 
+/* PRIMERA SECCION */
+
 .section-one {
   background-image: url(https://brand.assets.adidas.com/image/upload/f_auto,q_auto,fl_lossy/if_w_gt_1920,w_1920/boca_ar_mh_large_d_ddd937bd1c.jpg);
   width: 100%;
@@ -120,15 +122,17 @@ main {
   box-shadow: 1px solid white;
 }
 
+/* SEGUNDA SECCION */
+
 .section-two {
   background-image: url(https://brand.assets.adidas.com/image/upload/f_auto,q_auto,fl_lossy/if_w_gt_1920,w_1920/sportswear_SS_23_global_launch_hp_masthead_primary_d_e3c0c8622e.jpg);
   width: 100%;
-  height: 700px;
+  height: 850px;
 }
 
 .jenna {
   max-width: 1200px;
-  height: 700px;
+  height: 850px;
   margin-left: 10rem;
   display: flex;
   flex-direction: column;
@@ -147,10 +151,50 @@ main {
 .jenna p {
   color: white;
   font-size: 19px;
-  max-width: 530px;
+  max-width: 500px;
 }
 
 .jenna a {
+  cursor: pointer;
+  color: black;
+  background: white;
+  padding: 1rem;
+  font-weight: 600;
+  box-shadow: 1px solid white;
+}
+
+/* TERCERA SECCION */
+.section-tree {
+  background-image: url(https://brand.assets.adidas.com/image/upload/f_auto,q_auto,fl_lossy/if_w_gt_1920,w_1920/precios_justos_stm_d_5247922b0c.jpg);
+  width: 100%;
+  height: 500px;
+}
+
+.precios {
+  max-width: 1200px;
+  height: 500px;
+  margin-left: 10rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.precios h2 {
+  font-family: "Inclusive Sans", sans-serif;
+  font-size: 30px;
+  font-weight: 800;
+  color: white;
+}
+
+.precios p {
+  color: white;
+  font-size: 19px;
+  max-width: 500px;
+}
+
+.precios a {
   cursor: pointer;
   color: black;
   background: white;
