--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,7 @@
   box-sizing: border-box;
   text-decoration: none;
   list-style-type: none;
+  font-family: "Inclusive Sans", sans-serif;
 }
 
 /* HEADER */
@@ -18,6 +19,7 @@
   position: fixed;
   width: 100%;
   background: white;
+  z-index: 10;
 }
 
 .logo1 {
@@ -382,4 +384,61 @@ main {
 .container-info-bc b {
   font-weight: 200;
   font-size: 12px;
+}
+
+/* SEPTIMA SECCION */
+.section-seven {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 5rem;
+  height: 500px;
+}
+
+.container-pop {
+  margin-left: 125px;
+}
+
+.container-pop h3 {
+  font-size: 30px;
+  font-family: "Inclusive Sans", sans-serif;
+}
+
+.container-forum {
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  flex-wrap: wrap;
+}
+
+.container-forum p {
+  font-size: 40px;
+  font-weight: 600;
+  font-family: "Inclusive Sans", sans-serif;
+}
+
+.container-forum a {
+  color: black;
+}
+
+.container-forum a:hover {
+  border-bottom: 7px solid black;
+}
+
+/* SECCION OCHO */
+.section-ocho {
+  display: flex;
+  flex-direction: column;
+}
+
+.container-mejor-adidas {
+  margin-left: 125px;
+}
+
+.container-mejor-adidas a {
+  font-size: 20px;
+  background: black;
+  color: white;
+  padding: 12px;
 }
