--- a/styles/styles.css
+++ b/styles/styles.css
@@ -60,29 +60,34 @@ main {
   padding-top: 65px;
 }
 
-.section-white {
+.div-white {
   background-color: white;
 }
 
 .line-white {
-  background: #f7f7f7;
+  background: #eceff1;
   height: 60px;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-top: 10px;
 }
 
 .line-white p {
-  font-size: 19px;
+  font-size: 16px;
 }
 
 .line-white a {
-  font-size: 19px;
+  font-size: 16px;
   color: black;
-  border-bottom: 1px solid black;
+  text-decoration: underline;
 }
 
+.line-white a:hover {
+  background: black;
+  color: white;
+}
 /* PRIMERA SECCION */
 
 .section-one {
@@ -460,8 +465,151 @@ main {
 
 .container-card-cams-bc-bottom {
   width: 283px;
-  height: 300px;
+  height: 370px;
   display: flex;
   flex-direction: column;
   gap: 10px;
+}
+
+.container-card-cams-bc-bottom:hover {
+  border: 1px solid black;
+}
+
+/* NOVENA SECCION */
+.section-nueve {
+  display: flex;
+  margin-top: 100px;
+  background: #f2f3d6;
+  padding: 3rem 8rem;
+  gap: 4rem;
+}
+
+.container-info-bottom {
+  display: flex;
+  flex-direction: column;
+  gap: 27px;
+}
+
+.container-info-bottom h3 {
+  font-size: 25px;
+}
+
+.container-info-bottom p {
+  max-width: 750px;
+  color: #464645;
+}
+
+/* SECCION DIEZ */
+.section-diez {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  background: #e1ea19;
+  padding: 3% 7rem;
+}
+
+.section-diez h5 {
+  font-size: 35px;
+}
+
+.section-diez a {
+  cursor: pointer;
+  color: white;
+  background: black;
+  padding: 16px 30px;
+  font-weight: 600;
+  box-shadow: 1px solid white;
+}
+
+.section-diez a:hover {
+  opacity: 60%;
+}
+
+/* SECCION ONCE */
+.section-once {
+  height: 650px;
+  display: flex;
+  gap: 4rem;
+  padding: 3rem 10rem;
+  justify-content: center;
+}
+
+.container-title-links-footer h4 {
+  font-weight: 800px;
+}
+
+.container-link-footer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.container-links {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.container-links a {
+  color: black;
+  font-size: 15px;
+}
+
+.container-links a:hover {
+  text-decoration: underline;
+}
+
+.brand-img {
+  width: 150px;
+}
+
+.data-img {
+  width: 150px;
+  height: 200px;
+}
+.inf-empr {
+  max-width: 200px;
+}
+
+.container-footer-img {
+  display: flex;
+  flex-direction: column;
+  width: 25px;
+  gap: 10px;
+}
+
+/* FOOTER */
+
+.footer {
+  padding: 23px;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  background: #282c31;
+  align-items: center;
+}
+
+.footer span {
+  color: #d3d7da;
+  font-size: 12px;
+}
+
+.container-footer {
+}
+
+.container-links-footer {
+  display: flex;
+  gap: 1rem;
+}
+
+.container-links-footer a {
+  color: #d3d7da;
+  padding-right: 20px;
+  /* border-right: 2px solid #d3d7da; */
+  font-size: 11px;
+}
+
+.link {
+  border-right: 1px solid #d3d7da;
 }
